# a2a_research

./: .editorconfig  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  debug_claim_state.py  debug_gather.py  debug_gather2.py  debug_pytest_fixture.py  debug_verify_detailed.py  debug_verify_trace.py  debug_workflow.py  extract_prompts.py  extract_prompts_v2.py  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrefly.toml  pyrightconfig.json  test_monkeypatch.py  test_monkeypatch2.py  turbo.json
apps/api/: package.json  pyproject.toml
apps/api/agents/langgraph/fact_checker/: __init__.py  __main__.py  card.py  core.py  main.py  node_support.py  nodes.py  payload.py  prompt_VERIFY_PROMPT.txt  result.py  state.py  verify_route.py
apps/api/agents/pocketflow/: __init__.py
apps/api/agents/pocketflow/clarifier/: __init__.py  __main__.py  card.py  events.py  extract.py  flow.py  main.py  nodes.py  nodes_audit.py  prompt.py
apps/api/agents/pocketflow/planner/: __init__.py  __main__.py  card.py  events.py  extract.py  flow.py  main.py  nodes.py  nodes_base.py  nodes_extract.py  prompt_TEMPORAL_PROMPT.txt
apps/api/agents/pydantic_ai/: __init__.py
apps/api/agents/pydantic_ai/synthesizer/: __init__.py  __main__.py  agent.py  artifacts.py  card.py  core.py  main.py  payload.py
apps/api/agents/smolagents/reader/: __init__.py  __main__.py  agent.py  card.py  core.py  events.py  main.py  payload.py  tools.py
apps/api/agents/smolagents/searcher/: __init__.py  __main__.py  agent.py  card.py  core.py  main.py  payload.py  result.py  results.py  tools.py
apps/api/agents/stubs/adversary/: __init__.py  card.py  main.py
apps/api/agents/stubs/critic/: __init__.py  card.py  main.py
apps/api/agents/stubs/evidence_deduplicator/: __init__.py  card.py  main.py  payload.py
apps/api/agents/stubs/postprocessor/: __init__.py  card.py  main.py
apps/api/agents/stubs/preprocessor/: __init__.py  card.py  main.py
apps/api/agents/stubs/ranker/: __init__.py  card.py  main.py
apps/api/core/: __init__.py  __init__.pyi  _all.py  _facade.py  telemetry.py
apps/api/core/a2a/: __init__.py  card_specs.py  cards.py  client.py  client_helpers.py  proto.py  registry.py  request_task.py
apps/api/core/logging/: __init__.py  app_logging.py  exception_logging.py
apps/api/core/models/: __init__.py  claims.py  errors.py  fact_checker.py  provenance.py  session.py  verification.py  workflow.py
apps/api/core/progress/: progress_bus.py  progress_emit_core.py  progress_emit_events.py  progress_emit_prompts.py  progress_types.py  progress_utils.py
apps/api/core/settings/: __init__.py  settings_core.py  settings_core_agents.py  settings_dotenv_keys.py  settings_validation.py  settings_workflow.py  settings_workflow_budget_search_ranking.py
apps/api/core/utils/: __init__.py  citation_sanitize.py
apps/api/entrypoints/: __init__.py  agent_mounts.py  api.py  api_models.py  api_serializers.py  launcher.py  session_manager.py  streaming.py
apps/api/llm/: __init__.py  factory.py  protocol.py  providers.py  providers_errors.py  providers_support.py
apps/api/scripts/: extract_prompts.py  migrate_imports.py
apps/api/src/a2a_research/backend/core/: telemetry.py
apps/api/src/a2a_research/backend/entrypoints/: __init__.py  agent_mounts.py  api.py  launcher.py  session_manager.py  streaming.py
apps/api/src/a2a_research/backend/llm/: factory.py  providers.py  providers_support.py
apps/api/src/a2a_research/backend/tools/: __init__.py  fetch.py  search.py  search_brave.py  search_ddg.py  search_models.py  search_providers.py  search_tavily.py
apps/api/src/a2a_research/backend/workflow/: agents.py  coerce.py  coerce_state.py  engine.py  engine_final.py  engine_gather_rank_read.py  engine_loop.py  engine_loop_helpers.py  engine_loop_impl.py  engine_replan.py  engine_setup.py  engine_setup_helpers.py  provenance.py
apps/api/tests/: conftest.py  http_harness.py  test_a2a_card_specs.py  test_a2a_cards.py  test_a2a_client.py  test_a2a_client_helpers.py  test_a2a_client_helpers_build.py  test_a2a_compat.py  test_a2a_proto.py  test_a2a_proto_message.py  test_a2a_registry.py  test_a2a_request_task.py  test_agent_clarifier.py  test_agent_fact_checker.py  test_agent_fact_checker_http.py  test_agent_main.py  test_agent_planner.py  test_agent_planner_http.py  test_agent_reader.py  test_agent_reader_http.py  test_agent_searcher.py  test_agent_searcher_http.py  test_agent_synthesizer.py  test_agent_synthesizer_http.py  test_api_gateway_hardening.py  test_api_serializers.py  test_app_logging.py  test_budget_novelty.py  test_budget_termination.py  test_citation_sanitize.py  test_entrypoints_streaming.py  test_error_envelope.py  test_fact_checker_init.py  test_json_utils.py  test_llm_protocol.py  test_models_budget.py  test_models_claim.py  test_models_claim_state.py  test_models_claim_verification.py  test_models_dag.py  (+39 more)
apps/api/tests/eval/: golden_set_data.py  golden_set_data_factual.py  golden_set_data_subjective.py  golden_set_data_unanswerable.py  regression_helpers.py  regression_runner.py  scoring_metrics.py  test_eval_regression.py  test_eval_regression_cli.py  test_eval_scoring_extra.py
apps/api/tests/integration/: conftest.py  sse_helpers.py
apps/api/tests/property/: conftest.py  fixtures.py
apps/api/tools/: __init__.py  fetch.py  search.py  search_brave.py  search_ddg.py  search_merge.py  search_providers.py  search_tavily.py
apps/api/workflow/: __init__.py  __main__.py  agents.py  claims.py  coerce.py  coerce_state.py  definitions.py  engine.py  engine_final.py  engine_gather.py  engine_gather_normalize.py  engine_gather_rank_read.py  engine_gather_search.py  engine_loop.py  engine_loop_helpers.py  engine_loop_impl.py  engine_provenance.py  engine_replan.py  engine_setup.py  engine_setup_helpers.py  engine_verify.py  engine_verify_adversary.py  engine_verify_challenges.py  engine_verify_counter.py  engine_verify_provenance.py  provenance.py  reports.py  status.py  workflow_engine.py
(+713 files in other folders)
