[project]
name = "a2a-research"
version = "0.1.0"
description = "Local-first 4-agent A2A research system with PocketFlow orchestration"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pocketflow>=0.0.3",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "rich>=15.0.0",
    # UI
    "mesop>=1.2.7",
    # Vector store
    "chromadb>=1.5.7",
    # LLM providers (direct SDKs)
    "openai>=2.32.0",
    "anthropic>=0.95.0",
    "google-genai>=1.73.1",
    "ollama>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_research"]

[tool.ruff]
target-version = "py311"
line-length = 99
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
]
lint.select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "C4",
    "RUF",
    "PIE",
]
lint.ignore = ["E501"]
format.quote-style = "double"
format.indent-style = "space"

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.152.1",
]
lint = [
    "ruff>=0.15.10",
    "mypy>=1.20.1",
    "ty>=0.0.31",
    "pre-commit>=4.5.1",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-n auto --cov=src/a2a_research --cov-report=term-missing"

