[project]
name = "a2a-research"
version = "0.1.0"
description = "Local-first 4-agent A2A research system with PocketFlow orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core
    "pocketflow>=0.0.3",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "rich>=15.0.0",
    # UI
    "mesop>=1.2.7",
    # Vector store
    "chromadb>=1.5.7",
    # LLM providers (direct SDKs)
    "openai>=2.32.0",
    "anthropic>=0.95.0",
    "google-genai>=1.73.1",
    "ollama>=0.6.1",
]

[project.urls]
Homepage = "https://github.com/nicolas/a2a_research"
Repository = "https://github.com/nicolas/a2a_research"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_research"]

[tool.ruff]
target-version = "py311"
line-length = 99
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "C4",
    "RUF",
    "PIE",
    "W",
    "ASYNC",
    "T20",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/a2a_research/ui/**" = ["T20"]
"tests/**" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-watch>=4.2.0",
    "hypothesis>=6.152.1",
]
lint = [
    "ruff>=0.15.10",
    "mypy>=1.20.1",
    "ty>=0.0.31",
    "pre-commit>=4.5.1",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-n auto --cov=src/a2a_research --cov-report=term-missing"
filterwarnings = [
    "error",
    # Windows ProactorEventLoop and transport __del__ emit ResourceWarning during
    # GC after a test finishes; pytest wraps those in PytestUnraisableExceptionWarning.
    # Timing depends on garbage collection, so with filterwarnings=error they surface
    # as random xdist failures in unrelated async tests. Same workaround used by
    # aiogram, home-assistant/supervisor, Prefect, gunicorn, litestar, etc.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
warn_no_return = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "pocketflow.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a2a_research.ui.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "a2a_research.workflow.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = "a2a_research.helpers"
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
disable_error_code = ["type-arg"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
venvPath = "."
reportMissingImports = true
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.coverage.run]
source = ["a2a_research"]
relative_files = true
omit = ["tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
precision = 1
