[project]
name = "a2a-research"
version = "0.2.0"
description = "Multi-agent A2A research and verification pipeline (HTTP-orchestrated, OpenRouter-backed)"

license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core
    "pocketflow>=0.0.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "rich>=15.0.0",
    # API gateway
    "fastapi>=0.115.0",
    # LLM providers
    "openai>=2.32.0",
    "langgraph>=1.1.9",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.16",
    "pydantic-ai>=0.8.1",
    "smolagents[openai]>=1.24.0",
    "a2a-sdk>=1.0.0",
    "httpx>=0.28.1",
    "tavily-python>=0.7.23",
    "ddgs>=9.14.1",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.45.0",
    "logfire[fastapi]>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/nicolas/a2a_research"
Repository = "https://github.com/nicolas/a2a_research"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_research"]

[tool.ruff]
target-version = "py311"
line-length = 79
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "debug_*.py",
    "test_monkey*.py",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "C4",
    "RUF",
    "PIE",
    "W",
    "ASYNC",
    "T20",
]

[tool.ruff.lint.per-file-ignores]
"src/a2a_research/backend/core/models/session.py" = ["TC001"]
"src/a2a_research/backend/core/models/verification.py" = ["TC001"]
"src/a2a_research/backend/workflow/__main__.py" = ["T20"]
"tests/**" = ["T20", "TCH001", "TCH002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pylint.main]
# Scope to module length only; broader Pylint is too noisy alongside Ruff/mypy/ty.
disable = ["all"]
enable = ["too-many-lines"]

[tool.pylint.format]
max-module-lines = 200

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-watch>=4.2.0",
    "hypothesis>=6.152.1",
    "httpx-sse>=0.4.0",
]
lint = [
    "ruff>=0.15.11",
    "mypy>=1.20.2",
    "ty>=0.0.32",
    "pre-commit>=4.5.1",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    "pylint>=4.0.0",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-n auto --cov=src/a2a_research --cov-report=term-missing"
filterwarnings = [
    "error",
    # Windows ProactorEventLoop and transport __del__ emit ResourceWarning during
    # GC after a test finishes; pytest wraps those in PytestUnraisableExceptionWarning.
    # Timing depends on garbage collection, so with filterwarnings=error they surface
    # as random xdist failures in unrelated async tests. Same workaround used by
    # aiogram, home-assistant/supervisor, Prefect, gunicorn, litestar, etc.
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # lark (via rfc3987_syntax→jsonschema→mcp→pydantic_ai) imports the
    # deprecated sre_parse stdlib shim on Python 3.12; not our code to fix.
    # lark also imports sre_constants, sre_compile via the same chain.
    "ignore:module 'sre_.*' is deprecated:DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
warn_no_return = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "a2a_research.backend.core.a2a.proto"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a2a_research.backend.agents.stubs.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pocketflow.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a2a_research.backend.agents.pocketflow.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
disable_error_code = ["type-arg", "misc"]

[[tool.mypy.overrides]]
module = "a2a_research.backend.agents.smolagents.*"
disallow_untyped_calls = false
disable_error_code = ["misc", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "a2a_research.backend.agents.langgraph.*"
disallow_untyped_calls = false
disable_error_code = ["union-attr"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
venvPath = "."
reportMissingImports = true
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.coverage.run]
source = ["src/a2a_research"]
relative_files = true
data_file = ".coverage"
omit = ["tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
precision = 1
